<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoneyKeeper App v 1.3</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings1">Settings1</string>
    <string name="action_settings2">Settings2</string>
    <string name="action_settings3">Settings3</string>
    <string name="action_settings4">Settings4</string>
    <string name="action_settings5">Settings5</string>
    <string name="action_settings6">Settings6</string>
    <string name="action_settings7">Settings7</string>
    <string name="action_settings8">Settings8</string>

    <string name="hello_world">Hello world!</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <string-array name="currencies">
        <item>Euro</item>
        <item>Dollar</item>
        <item>UAH</item>
        <item>RUB</item>
    </string-array>

</resources>
